--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 dependencyResolutionManagement {
@@ -15,3 +16,4 @@ dependencyResolutionManagement {
 rootProject.name = "Reterofit Sample"
 include ':app'
 include ':reterofit_network_calls'
+
